[gd_scene load_steps=8 format=3 uid="uid://cg8lpqwwm553e"]

[ext_resource type="Script" path="res://GUI/PauseMenu/pauseMenu.gd" id="1_syltk"]
[ext_resource type="Texture2D" uid="uid://c8ehgf31m8yp1" path="res://Items/Sprites/items.png" id="2_jvcgh"]
[ext_resource type="PackedScene" uid="uid://dxihynjgnrp4u" path="res://GUI/Inventory/inventorySlot.tscn" id="3_84ssm"]
[ext_resource type="Script" path="res://GUI/Inventory/Scripts/inventoryUI.gd" id="3_s01ge"]
[ext_resource type="Resource" uid="uid://b6d6rc77ngjyi" path="res://GUI/Inventory/playerInventory.tres" id="4_re138"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r1p"]
atlas = ExtResource("2_jvcgh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nr7q2"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_b1r1p")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_syltk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.168627, 0.133333, 0.490196)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 610.0
offset_top = 74.0
offset_right = 687.0
offset_bottom = 97.0
text = "{ Paused }"

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 0
offset_left = 90.0
offset_top = 506.0
offset_right = 506.0
offset_bottom = 562.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = 218.0
offset_right = -62.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonSave" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Save"

[node name="ButtonLoad" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Load"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 74.0
offset_top = 186.0
offset_right = 498.0
offset_bottom = 490.0
theme_override_styles/panel = SubResource("StyleBoxTexture_nr7q2")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_s01ge")
data = ExtResource("4_re138")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_84ssm")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_84ssm")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_84ssm")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_84ssm")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_84ssm")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_84ssm")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
volume_db = -17.024
max_polyphony = 4
